fix: diagram too narrow (#160)
Close #159

--- a/assets/hb/modules/mermaid/scss/index.scss
+++ b/assets/hb/modules/mermaid/scss/index.scss
@@ -1,8 +1,7 @@
 .mermaid {
-    align-items: center;
-    display: flex;
-    justify-content: center;
     margin-bottom: 1rem;
+    overflow: auto;
+    text-align: center;
 
     &:not([data-processed="true"]) {
         height: 120px;
